# scikit-transformers

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  search.html  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  statics.yaml  tests.yaml
.utils/: Dockerfile  Dockerfile.base  _ci.yaml  bashrc.sh  build.sh  docker.sh  docs.sh  kill_env.sh  pre-commit-.sh  pre-push.sh  pytest.sh  setup.py
CHANGELOG/: index.html
CONTRIBUTING/: index.html
api-reference/: index.html
api/BoolColumnTransformer/: index.html
api/DropUniqueColumnTransformer/: index.html
api/LogColumnTransformer/: index.html
api/Pipelines/: index.html
docs/: example.ipynb  mkdocs.yml  simple_example.ipynb
docs/.utils/: Dockerfile  Dockerfile.base  init.sh  kill_env.sh  pytest.sh
docs/.utils/DEPRECATED/: .pre-commit-config.yaml  build.sh  docs.sh  pre-commit-.sh  pre-push.sh
docs/docs/: CHANGELOG.md  CONTRIBUTING.md  about.md  api-reference.md  contributing.md  index.md  installation.md  license.md  releases.md  troubleshooting.md  usage.md  user_guide.md
docs/docs/api/: BoolColumnTransformer.md  DropUniqueColumnTransformer.md  LogColumnTransformer.md
docs/notebooks/: BoolColumnTransformer copy.ipynb  BoolColumnTransformer.ipynb  DropUniqueColumnTransformer.ipynb  LogColumnTransformer.ipynb  Pipelines.ipynb  drop_unique_columns.ipynb  simple_example.ipynb
docs/notebooks/cleaner/: BaseDataCleaner.ipynb
docs/notebooks/scaler/: StandardScaler.ipynb
docs/notebooks/selector/: DropSkuColumnSelector.ipynb  DropUniqueColumnSelector.ipynb
docs/notebooks/transformer/: BoolColumnTransformer.ipynb  LogColumnTransformer.ipynb
installation/: index.html
releases/: index.html
search/: search_index.json
skres/: __init__.py
sktransf/: __init__.py  _get_titanic.py  _use_case.py  _utils.py  bool.py  drop.py  drop_unique.py  log.py  logger.py  unique.py  validators.py
sktransf/cleaner/: __init__.py  base.py
sktransf/scaler/: __init__.py  standard.py
sktransf/selector/: __init__.py  sku.py  unique.py
sktransf/transformer/: __init__.py  bool.py  log.py
sktransf/utils/: __init__.py  get_titanic.py  use_case.py
tests/: conftest.py  test_logger.py  test_skres.py  test_utils.py
tests/integration/: test_bool.py  test_drop_unique.py  test_logger.py
tests/integration/selector/: test_unique.py
tests/integration/transformer/: test_bool.py  test_log.py
tests/unit/: test_bool.py  test_drop_unique.py  test_get_titanic.py  test_log.py  test_logger.py  test_unique.py  test_use_case.py
tests/unit/scaler/: test_standard.py
tests/unit/selector/: test_sku.py  test_unique.py
tests/unit/transformer/: test_bool.py  test_log.py
tests/unit/utils/: test_get_titanic.py  test_use_case.py
troubleshooting/: index.html
usage/: index.html
