[tool.poetry]
name = "scikit-res"
version = "0.1.1"
description = "Very Basic package to store results of ML models"
authors = ["AlexandreGazagnes <alex@gazagnes.net>"]
readme = "README.md"
packages = [{include = "skres"}]

[tool.poetry.dependencies]
python = "3.10.12"
scikit-learn = "^1.4.0"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.6"
jupyterlab = "^4.0.10"
ipykernel = "^6.28.0"
jupytext = "^1.16.1"
ipywidgets = "^8.1.1"
jupyter-contrib-nbextensions = "^0.7.0"
nbconvert = "7.14.1"
black = {extras = ["jupyter"], version = "^23.12.1"}
ipython = "^8.18.1"

[tool.poetry.group.qa.dependencies]
pytest = "^7.4.4"
isort = "^5.13.2"
coverage = "^7.4.0"
coverage-badge = "^1.1.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
bandit = "^1.7.6"
pyflakes = "^3.2.0"
pydocstyle = "^6.3.0"
mccabe = "^0.7.0"
safety = "^2.3.5"
pre-commit = "^3.6.0"
pycln = "^2.4.0"
mkdocs = "1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.coverage.run]
disable_warnings = ["no-data-collected"]