[tool.poetry]
name = "scikit-transformers"
version = "0.2.0"
description = "Very Basic package make some usefull log transformation for scikit-learn"
authors = ["AlexandreGazagnes <alex@gazagnes.net>"]
readme = "README.md"
packages = [{include = "sktransf"}]

[tool.poetry.dependencies]
python = "3.10.12"
# python = "3.11.3"
scikit-learn = ">=1.0.0"
pandas = ">=1.4.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.6"
jupyterlab = "^4.0.10"
ipykernel = "^6.28.0"
jupytext = "^1.16.1"
ipywidgets = "^8.1.1"
jupyter-contrib-nbextensions = "^0.7.0"
nbconvert = "7.14.1"
black = {extras = ["jupyter"], version = "^23.10.1"}
ipython = "^8.18.1"
seaborn = "^0.13.2"
pre-commit = "^3.6.0"

[tool.poetry.group.qa.dependencies]
black = {extras = ["jupyter"], version = "^23.10.1"}
pep8 = "^1.7.1"
mypy = "^1.6.1"
flake8 = "^6.1.0"
pylint = "^3.0.2"
pycln = "^2.4.0"
bandit = "^1.7.7"
isort = "^5.13.2"
pycodestyle = "^2.11.1"
pydocstyle = "^6.3.0"
vulture = "^2.11"
mccabe = "^0.7.0"
pyupgrade = "^3.15.0"
safety = "^3.0.1"
# coverage = "^7.3.2"



[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "^7.4.1"
coverage-badge = "^1.1.0"

[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
# addopts = ["--cov=sktransf", "--cov-report=term-missing", "--cov-report=xml", "--cov-report=html", "--cov-fail-under=100"]
# filterwarnings = "ignore::DeprecationWarning"
filterwarnings= [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    # 'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

# [tool.mypy]
# show_error_codes = true
# ignore_missing_imports = true
# no_strict_optional = true

[tool.vulture]
exclude = ["*file*.py", "dir/"]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*"]
make_whitelist = true
min_confidence = 80
paths = ["tests/", "sktransf/"]
sort_by_size = true
verbose = true

[tool.coverage.run]
disable_warnings = ["no-data-collected"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
